# Quantum-Safe-Scan

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  SECURITY.md  TECHNICAL_OVERVIEW.md  action.yml  pyproject.toml  render.yaml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml  quantumsafe-scan.yml
backend/: api.py  app.py  config.py  models.py  requirements.txt  seed_demo.py
benchmark/: COMPARISON.md  README.md  RESULTS-realworld.md  RESULTS.md  comparison.json  comparison.py  realworld.json  realworld.py
benchmark/graphs/: README.md  generate_graphs.py  generate_realworld_graphs.py
cli/: __init__.py  callgraph.py  cli.py  reporter.py  scanner.py  taint.py
docs/: ARCHITECTURE.md  CVE_MAPPING.md  NIST_MAPPING.md  PQC_READINESS_OUTREACH.md  RELEASING.md  TECHNICAL_REPORT.md  WHITEPAPER.md  architecture_diagram.txt
examples/: README.md  client.js  payments.py  safe.py  wrapped_crypto.py
examples/legacy/: Crypto.java
frontend/: 404.html  analytics.js  app.js  config.js  dashboard.html  index.html  login.html  migration.html  package-lock.json  package.json  privacy.html  research.html  robots.txt  scan.html  sitemap.xml  style.css  terms.html
frontend/.well-known/: security.txt
pqc/: README.md  benchmark.py  lwe_kem.py  requirements.txt
quantum/: README.md  resources.py
study/: REPORT.md  results.json  run_study.py
tests/: conftest.py  test_api.py  test_callgraph.py  test_conformance.py  test_features.py  test_pqc.py  test_quantum.py  test_scanner.py  test_scorer.py  test_taint.py
